add github rewrite so that a username and password isn't needed every time

--- a/.gitconfig
+++ b/.gitconfig
@@ -23,6 +23,10 @@
 			git commit --amend -m \"$(git log -1 --pretty=%B)\n\nCloses #$1.\"; \
 		fi \
 	}; f"
+
+[url "git@github.com:segovia94/"]
+  insteadOf = "git://github.com/segovia94/"
+  insteadOf = "https://github.com/segovia94/"
 	
 [color]
 	ui = always
