--- a/.gitconfig
+++ b/.gitconfig
@@ -46,3 +46,6 @@
 [url "git@github.com:segovia94/"]
 	insteadOf = "git://github.com/segovia94/"
 	insteadOf = "https://github.com/segovia94/"
+
+[core]
+	excludesfile = ~/.gitignore
