--- a/.gitconfig
+++ b/.gitconfig
@@ -51,8 +51,8 @@
 	local = yellow
 	remote = green
 [color "status"]
-	added = yellow
-	changed = green
+	added = green
+	changed = yellow
 	untracked = cyan
 
 [push]
